--- a/styles/style.scss
+++ b/styles/style.scss
@@ -99,38 +99,33 @@ nav {
 .navbar-container {
   display: flex;
   justify-content: center;
-  padding-top: 10px;
-  background: rgba(0, 0, 0, 0.7);
-    .menu-items {
+  background: rgba(0, 0, 0, 0.8);
+  .menu-items {
     display: flex;
     justify-content: space-between;
     align-items: center;
     a {
       color: white;
     }
+    .contact-button {
+      background: white;
+      padding: 0.5rem 1rem;
+      border-radius: 5%;
+      color: black; 
+    }
+    .contact-button:hover {
+      color: red;
+    }
   }
-}
-
-.contact-button {
-  background: red;
-  padding: 0.5rem 1rem;
-  border-radius: 5%;
-  color: white;
-}
-
-.contact-button:hover {
-  color: black;
-}
-
-a {
-  font-weight: 500;
-  font-size: 1.25rem;
-  text-decoration: none;
-  color: black;
-}
-
-a:hover {
-  color: red;
+  a {
+    font-weight: 500;
+    font-size: 1.25rem;
+    text-decoration: none;
+    color: black;
+  }
+  a:hover {
+    color: red;
+  }
 }
 
 .menu-items a {
@@ -304,32 +299,8 @@ header {
       text-align: left;
       padding-left: 2rem;
       font-weight: normal;
-      width: 50%;
+      width: 80%;
     }
-  }
-}
-
-//----------------------------- Billing
-
-.billing {
-  display: flex;
-  .billing-container {
-    display: flex;
-    flex-direction: column;
-    width: 30%;
-    justify-content: center;
-  }
-  .billing-text-container {
-    width: 60%;
-  }
-  h2 {
-    font-size: 1.5rem;
-    text-align: left;
-  }
-  div {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
   }
 }
 
@@ -342,15 +313,12 @@ header {
 }
 
 .about {
-  display: flex;
-  justify-content: space-between;
-
   div:first-of-type {
-    width: 40%;
+    width: 100%;
     text-align: center;
   }
   div:last-of-type {
-    max-width: 50%;
+    max-width: 100%;
     p:first-of-type {
       margin-top: 0;
       padding-top: 0;
@@ -373,6 +341,8 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background: rgba(255,255,255, 0.8);
+  padding: 1rem 5rem;
   div {
     width: 23%;
   }
@@ -446,7 +416,7 @@ footer {
   a {
     font-family: "Open Sans";
     font-size: 1.1rem;
-    color: red;
+    color: white;
   }
   img {
     width: 60px;
