--- a/styles/style.scss
+++ b/styles/style.scss
@@ -10,8 +10,8 @@ body {
   font-size: 1.2rem;
   margin: 0 auto;
   background-image: url("../assets/background-images/dark-wood-background.jpg");
-  background-size:     contain;                      /* <------ */
-  background-repeat:   repeat;
+  background-size: contain; /* <------ */
+  background-repeat: repeat;
   background-position: center center;
   color: white;
 }
@@ -111,7 +111,7 @@ nav {
       background: white;
       padding: 0.5rem 1rem;
       border-radius: 5%;
-      color: black; 
+      color: black;
     }
     .contact-button:hover {
       color: red;
@@ -186,8 +186,8 @@ nav {
 header {
   position: relative;
   text-align: center;
+  height: 1vh;
   z-index: 0;
-  height: 500px;
   .header-image-text {
     position: absolute;
     top: 30%;
@@ -205,7 +205,6 @@ header {
     }
   }
   .header-image-container {
-    height: 500px;
     width: 100%;
     position: relative;
     opacity: 0.5;
@@ -217,7 +216,6 @@ header {
       bottom: 0;
       width: 100%;
       object-fit: cover;
-      height: 500px;
     }
     .top {
       animation-name: cf3FadeInOut;
@@ -341,7 +339,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: rgba(255,255,255, 0.8);
+  background: rgba(255, 255, 255, 0.8);
   padding: 1rem 5rem;
   div {
     width: 23%;
