--- a/styles/style.scss
+++ b/styles/style.scss
@@ -186,9 +186,12 @@ nav {
 
 header {
   .header-image-container {
-    width: 85%;
+    width: 70%;
     margin: 0 auto;
     opacity: 0.9;
+    img {
+      margin-bottom: -80px;
+    }
   }
 }
 
@@ -206,7 +209,7 @@ header {
     align-items: center;
     padding-bottom: 3rem;
     img {
-      width: 110px;
+      width: 120px;
       height: 149px;
     }
     p {
@@ -235,7 +238,7 @@ header {
     align-items: center;
     padding-bottom: 1rem;
     img {
-      width: 110px;
+      width: 120px;
       height: 149px;
     }
     p {
