--- a/styles/style.scss
+++ b/styles/style.scss
@@ -381,7 +381,31 @@ footer {
   }
 }
 
+.iframe-container {
+  overflow: hidden;
+  // 16:9 aspect ratio
+  padding-top: 56.25%;
+  position: relative;
+}
+
+.iframe-container iframe {
+  border: 0;
+  height: 40%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
 //----------------------------- Media queries
+
+@media only screen and (max-width: 1250px) {
+  footer {
+    .iframe-google {
+      max-width: 80% !important;
+      margin: 0 auto;
+    }
+  }
+}
 
 @media only screen and (max-width: 1115px) {
   //----------------------------- Contact
