--- a/styles/style.scss
+++ b/styles/style.scss
@@ -34,6 +34,11 @@ img {
   max-width: 100%;
 }
 
+hr {
+  color: white;
+  opacity: 0.8;
+}
+
 //----------------------------- Text
 
 body {
@@ -147,7 +152,7 @@ nav {
   .bar {
     height: 3px;
     width: 100%;
-    background-color: black;
+    background-color: white;
     border-radius: 10px;
   }
 }
@@ -190,9 +195,32 @@ header {
     margin: 0 auto;
     opacity: 0.9;
     img {
-      margin-bottom: -80px;
+      margin-bottom: -120px;
     }
   }
+}
+
+//----------------------------- Divider/Gradient
+
+/* Glyph, by Harry Roberts */
+
+.style-eight {
+  overflow: visible; /* For IE */
+  padding: 0;
+  border: none;
+  border-top: medium double white;
+  color: #333;
+  text-align: center;
+}
+
+.style-eight:after {
+  content: "§";
+  display: inline-block;
+  position: relative;
+  top: -0.7em;
+  font-size: 1.5em;
+  padding: 0 0.25em;
+  color: red;
 }
 
 //----------------------------- Services
@@ -254,14 +282,14 @@ header {
 
 #about {
   h2 {
-    margin-bottom: 2rem;
+    margin-top: $consistent-gap;
   }
 }
 
 .about {
   display: flex;
   justify-content: space-between;
-
+  padding: $consistent-gap;
   div:first-of-type {
     width: 40%;
     text-align: center;
