--- a/styles/style.css
+++ b/styles/style.css
@@ -139,6 +139,10 @@ nav {
   margin-left: 50px;
 }
 
+.mobile-navbar-container {
+  height: 300px;
+}
+
 .toggle-button {
   position: absolute;
   top: 2rem;
@@ -188,7 +192,6 @@ nav {
         -ms-flex-direction: column;
             flex-direction: column;
     margin-bottom: 25px;
-    margin-top: 100px;
   }
   nav .menu-items a {
     text-align: center;
@@ -601,9 +604,6 @@ footer img {
   }
   footer div {
     width: 50%;
-  }
-  .navbar-container {
-    background: rgba(0, 0, 0, 0.6);
   }
   .logo-container {
     display: none;
